Actions
Bug #5902
closedUnable to take ownership, view permissions, or delete files...
Start date:
2015-05-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
When connected to the server as a user with administrative privileges, one should be able to "take ownership" of files (as offered in the security properties editor in windows).
This should work, but the server returns "access denied".
Updated by Gordon Ross about 8 years ago
Server credentials were missing some Unix privileges that should be in place when the Windows privileges include "take ownwership"
Updated by Gordon Ross about 8 years ago
- Subject changed from Unable to take ownership, view permissions, or delete files... to Unable to take ownership, view permissions, or delete files...
Updated by Electric Monk about 8 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 961125f22fcbbcf361c897aaf3f8be5b1dbceefe
commit 961125f22fcbbcf361c897aaf3f8be5b1dbceefe Author: Gordon Ross <gwr@nexenta.com> Date: 2015-05-08T14:38:58.000Z 5902 Unable to take ownership, view permissions, or delete files... Reviewed by: Alek Pinchuk <alek@nexenta.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@omniti.com>
Actions