5902 Unable to take ownership, view permissions, or delete files... Reviewed by: Alek Pinchuk <alek@nexenta.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@omniti.com>